2006-05-25  Bryce Harrington <bryce@bryceharrington.org>
	* src/inkscape.cpp:  i18n on error messages (fix for bug 1490928) 

2006-05-23  Jon A. Cruz  <jon@joncruz.org>

	* src/dialogs/layers-panel.cpp, src/dialogs/swatches.cpp,
	  src/dialogs/swatches.h, src/preferences-skeleton.h,
	  src/ui/previewfillable.h, src/ui/previewholder.cpp,
	  src/ui/previewholder.h, src/ui/widget/panel.cpp,
	  src/ui/widget/panel.h, src/verbs.cpp,
	  src/widgets/desktop-widget.cpp:
	  Refactored panels.
	  Fixes RFE #1453153. Fixes RFE #1453152.
	

2006-05-23  MenTaLguY  <mental@rydia.net>

	* src/extension/internal/ps.cpp:

	  move %%EOF to end of output document

2006-05-22  Jon A. Cruz  <jon@joncruz.org>

	* src/dialogs/swatches.cpp, src/ui/widget/panel.cpp,
	  src/ui/widget/panel.h:
	  Removed panel menu unless requested. Fixes bug #1492597.

2006-05-22  MenTaLguY  <mental@rydia.net>

	* src/extension/internal/svg.cpp:

	  replace EXTREMELY inefficient (O(n^2), I think?) stacked C string
	  concatenations with appends to a std::vector, which is amortized O(1)

2006-05-21  Marco Scholten  <mscholtn@xs4all.nl>

	* src/ui/dialog/inkscape-preferences.cpp, 
      src/ui/dialog/inkscape-preferences.h: 
	  Added 'Show close button on dialogs' option.

2006-05-21  MenTaLguY  <mental@rydia.net>

	* src/ui/view/view-widget.cpp:
	
	  request collection pass after destruction of a view widget

2006-05-21  MenTaLguY  <mental@rydia.net>

	* src/gc-core.h, src/gc.cpp:
	
	  add GC::request_early_collection() to force a collection from the idle
	  loop at opportune times

	* src/dialogs/filedialog.cpp:

	  call GC::request_early_collection() after switching preview images

2006-05-21  Jon A. Cruz  <jon@joncruz.org>

	* src/layer-manager.cpp, src/layer-manager.h,
	  src/dialogs/layers-panel.cpp, src/dialogs/layers-panel.h:
	  Adding notification when managed layers change.

2006-05-21  Michael Wybrow  <mjwybrow@users.sourceforge.net>
